Correct text-alignment in footer paragraph

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,5 +30,5 @@ p {
 
 footer p {
     color: gray;
-    text-align: gray;
+    text-align: right;
 }
